--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.work:work-runtime-ktx:$versions.work"
+    implementation "androidx.work:work-runtime-ktx:2.3.4"
     implementation "com.github.bumptech.glide:glide:4.10.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
